<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">牵挂</string>
    <string name="action_settings">设置</string>
    <string name="login_pwd">密码</string>
    <string name="login_phone">手机号</string>
    <string name="login_btn">登录</string>
    <string name="login_rem">记住密码</string>
    <string name="login_findpwd">找回密码</string>
    <string name="register_inLogin">注册账号</string>
    <string name="fall_down_switch_text">摔倒检测开关</string>
    <string name="fall_down_switch_description">注意：开启摔倒检测会增加耗电量。</string>
    <string name="photo_share_switch_text">其他功能开关</string>
    <string name="photo_share_switch_description">其他功能包括位置追踪、照片共享、日程提醒这三项功能，建议开启。</string>
    <string name="title_activity_register">注册</string>
    <string name="register_next">></string>
    <string name="register_one">1 输入手机号码</string>
    <string name="register_two">2 输入验证码</string>
    <string name="register_three">3 设置密码</string>
    <string name="register_phone_hint">请输入您的手机号</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_enter_code_hint">请输入手机获取的短信验证码</string>
    <string name="register_next_step">下一步</string>
    <string name="register_submit_code">提交验证码</string>
    <string name="title_activity_register3">Register3Activity</string>
    <string name="register_enter_pwd_hint">6到32位字母数字符号组合</string>
    <string name="register_enter_pwd_again_hint">请再次输入设置的密码</string>
    <string name="register_enter_name_hint">请输入您的用户名</string>
    <string name="title_activity_schedule_notice">ScheduleNoticeActivity</string>
    <string name="login_action_title">登录</string>
    <string name="register_action_title">注册</string>
    <string name="setting_action_title">设置</string>

</resources>