<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/fallDownServiceSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fall_down_switch_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/fall_down_switch_description"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/photoshareServiceSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/photo_share_switch_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/photo_share_switch_description"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_selector"
        android:text="退出"
        android:layout_alignParentBottom="true"
        android:textColor="#FFF" />

</RelativeLayout>